Updated to Java 21 and general clean-up